--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
     </header>
 
-    <main>
+    <main class="main">
       <section class="services hide">
         <header class="services__header">
           <h1 class="services__title">Услуги и сервисы</h1>
@@ -129,18 +129,23 @@
 
       <section class="price">
         <h2 class="price__title title">Цены на услуги</h2>
+        <div class="price__head">
+          <p class="price__head-col price__head-col--services">Ремонтные услуги</p>
+          <p class="price__head-col price__head-col--price">Цена</p>
+          <p class="price__head-col price__head-col--term">Срок</p>
+        </div>
         <div class="price__swiper swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide price__card card">
-              <div class="card__item">
+              <div class="card__item card__item--services">
                 <p class="card__title">Ремонтные услуги</p>
                 <p class="card__description">Диагностика</p>
               </div>
-              <div class="card__item">
+              <div class="card__item card__item--price">
                 <p class="card__title">Цена</p>
                 <p class="card__description">Бесплатно</p>
               </div>
-              <div class="card__item">
+              <div class="card__item card__item--term">
                 <div>
                   <p class="card__title">Срок</p>
                   <p class="card__description">30 мин</p>
@@ -152,15 +157,15 @@
             </div>
 
             <div class="swiper-slide price__card card">
-              <div class="card__item">
+              <div class="card__item card__item--services">
                 <p class="card__title">Ремонтные услуги</p>
                 <p class="card__description">Замена дисплея</p>
               </div>
-              <div class="card__item">
+              <div class="card__item card__item--price">
                 <p class="card__title">Цена</p>
                 <p class="card__description">1 000 ₽</p>
               </div>
-              <div class="card__item">
+              <div class="card__item card__item--term">
                 <div>
                   <p class="card__title">Срок</p>
                   <p class="card__description">30-120 мин</p>
@@ -172,15 +177,15 @@
             </div>
 
             <div class="swiper-slide price__card card">
-              <div class="card__item">
+              <div class="card__item card__item--services">
                 <p class="card__title">Ремонтные услуги</p>
                 <p class="card__description">Замена полифонического динамика</p>
               </div>
-              <div class="card__item">
+              <div class="card__item card__item--price">
                 <p class="card__title">Цена</p>
                 <p class="card__description">1 000 ₽</p>
               </div>
-              <div class="card__item">
+              <div class="card__item card__item--term">
                 <div>
                   <p class="card__title">Срок</p>
                   <p class="card__description">30-120 мин</p>
@@ -192,15 +197,15 @@
             </div>
 
             <div class="swiper-slide price__card card">
-              <div class="card__item">
+              <div class="card__item card__item--services">
                 <p class="card__title">Ремонтные услуги</p>
                 <p class="card__description">Тестирование с&nbsp;выдачей технического заключения</p>
               </div>
-              <div class="card__item">
+              <div class="card__item card__item--price">
                 <p class="card__title">Цена</p>
                 <p class="card__description">1 000 ₽</p>
               </div>
-              <div class="card__item">
+              <div class="card__item card__item--term">
                 <div>
                   <p class="card__title">Срок</p>
                   <p class="card__description">30-120 мин</p>
@@ -212,15 +217,15 @@
             </div>
 
             <div class="swiper-slide price__card card">
-              <div class="card__item">
+              <div class="card__item card__item--services">
                 <p class="card__title">Ремонтные услуги</p>
                 <p class="card__description">Замена программного обеспечения</p>
               </div>
-              <div class="card__item">
+              <div class="card__item card__item--price">
                 <p class="card__title">Цена</p>
                 <p class="card__description">1 000 ₽</p>
               </div>
-              <div class="card__item">
+              <div class="card__item card__item--term">
                 <div>
                   <p class="card__title">Срок</p>
                   <p class="card__description">30-120 мин</p>
