--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,14 @@
   </head>
   <body>
     <div class="container">
+      <div class="substrate"></div>
+
       <aside class="burger-menu">
         <div class="burger-menu__container">
           <header class="burger-menu__header">
             <button
               type="button"
-              class="burger-menu__icon icon icon--close visually-hidden"
+              class="burger-menu__icon icon icon--close icon--close--hide visually-hidden"
               >Закрыть меню</button
             >
             <div class="burger-menu__logo logo">
@@ -123,7 +125,7 @@
         </div>
       </aside>
 
-      <section class="basic">
+      <section class="content">
         <header class="header">
           <div class="header__part">
             <button
@@ -482,6 +484,94 @@
           >
         </footer>
       </section>
+
+      <aside class="popup popup--call">
+        <div class="popup__container">
+          <button
+            type="button"
+            class="popup__icon icon icon--close visually-hidden"
+            >Закрыть меню</button
+          >
+          <div class="popup__content">
+            <h2 class="popup__title">Заказать звонок</h2>
+            <form class="popup__form form" action="#" method="get">
+              <input
+                class="form__input"
+                type="tel"
+                name="tel"
+                placeholder="Телефон"
+                maxlength="13"
+                required
+              />
+              <p class="form__text text"
+                >Нажимая “отправить”, вы даете согласие на&nbsp;
+                <span class="text text--pink"
+                  >обработку персональных данных</span
+                >
+                и&nbsp;соглашаетесь с&nbsp;нашей
+                <a href="#" class="text text--pink"
+                  >политикой конфиденциальности</a
+                ></p
+              >
+              <button class="form__btn" type="submit">Отправить</button>
+            </form>
+          </div>
+        </div>
+      </aside>
+
+      <aside class="popup popup--feedback">
+        <div class="popup__container">
+          <button
+            type="button"
+            class="popup__icon icon icon--close visually-hidden"
+            >Закрыть меню</button
+          >
+          <div class="popup__content feedback">
+            <h2 class="popup__title">Обратная связь</h2>
+            <form class="popup__form form" action="#" method="get">
+              <input
+                class="form__input"
+                type="text"
+                name="name"
+                placeholder="Имя"
+                maxlength="30"
+                required
+              />
+              <input
+                class="form__input form__input--tel"
+                type="tel"
+                name="tel"
+                placeholder="Телефон"
+                maxlength="13"
+              />
+              <input
+                class="form__input form__input--email"
+                type="email"
+                name="email"
+                placeholder="Электронная почта"
+                maxlength="50"
+              />
+              <textarea
+                class="form__input"
+                name="message"
+                rows="4"
+                placeholder="Сообщение"
+              ></textarea>
+              <p class="form__text text"
+                >Нажимая “отправить”, вы даете согласие на&nbsp;
+                <span class="text text--pink"
+                  >обработку персональных данных</span
+                >
+                и&nbsp;соглашаетесь с&nbsp;нашей
+                <a href="#" class="text text--pink"
+                  >политикой конфиденциальности</a
+                ></p
+              >
+              <button class="form__btn" type="submit">Отправить</button>
+            </form>
+          </div>
+        </div>
+      </aside>
     </div>
   </body>
 </html>
