--- a/src/index.html
+++ b/src/index.html
@@ -211,7 +211,7 @@
             </nav>
             <section class="services__info">
               <div class="services__infotext">
-                <div class="services__text hide">
+                <div class="services__text">
                   <p>
                     Мы являемся авторизованным сервисным центром по&nbsp;ремонту
                     техники Dell. Только у&nbsp;нас вы можете отремонтировать
@@ -230,8 +230,15 @@
                     родным и&nbsp;близким.
                   </p>
                 </div>
-                <button type="button" class="services__btn btn-show"
+                <button
+                  type="button"
+                  class="services__btn btn-show btn-show--services"
                   >Читать далее</button
+                >
+                <button
+                  type="button"
+                  class="services__btn btn-hide btn-hide--services"
+                  >Скрыть</button
                 >
               </div>
               <img src="./img/photo_CPS.jpg" class="services__photo" alt="" />
@@ -300,8 +307,11 @@
               </div>
               <div class="swiper-pagination"></div>
             </div>
-            <button type="button" class="brends__btn btn-show"
+            <button type="button" class="brends__btn btn-show btn-show--brends"
               >Показать все</button
+            >
+            <button type="button" class="brends__btn btn-hide btn-hide--brends"
+              >Скрыть</button
             >
           </section>
 
@@ -330,8 +340,15 @@
               </div>
               <div class="swiper-pagination"></div>
             </div>
-            <button type="button" class="techTypes__btn btn-show"
+            <button
+              type="button"
+              class="techTypes__btn btn-show btn-show--techTypes"
               >Показать все</button
+            >
+            <button
+              type="button"
+              class="techTypes__btn btn-hide btn-hide--techTypes"
+              >Скрыть</button
             >
           </section>
 
