--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </nav>
             <section class="services__info">
               <div class="services__infotext">
-                <div class="services__text hide">
+                <div class="services__text">
                   <p>
                     Мы являемся авторизованным сервисным центром по&nbsp;ремонту
                     техники Dell. Только у&nbsp;нас вы можете отремонтировать
@@ -105,7 +105,8 @@
                     родным и&nbsp;близким.
                   </p>
                 </div>
-                <button type="button" class="services__btn btn-show">Читать далее</button>
+                <button type="button" class="services__btn btn-show btn-show--services">Читать далее</button>
+                <button type="button" class="services__btn btn-hide btn-hide--services">Скрыть</button>
               </div>
               <img src="./img/photo_CPS.jpg" class="services__photo" alt="">
             </section>
@@ -151,7 +152,8 @@
               </div>
               <div class="swiper-pagination"></div>
             </div>
-            <button type="button" class="brends__btn btn-show">Показать все</button>
+            <button type="button" class="brends__btn btn-show btn-show--brends">Показать все</button>
+            <button type="button" class="brends__btn btn-hide btn-hide--brends">Скрыть</button>
           </section>
 
           <section class="techTypes hide">
@@ -167,7 +169,8 @@
               </div>
               <div class="swiper-pagination"></div>
             </div>
-            <button type="button" class="techTypes__btn btn-show">Показать все</button>
+            <button type="button" class="techTypes__btn btn-show btn-show--techTypes">Показать все</button>
+            <button type="button" class="techTypes__btn btn-hide btn-hide--techTypes">Скрыть</button>
           </section>
 
           <section class="price">
