--- a/src/index.html
+++ b/src/index.html
@@ -125,7 +125,7 @@
         </div>
       </aside>
 
-      <section class="content">
+      <div class="content">
         <header class="header">
           <div class="header__part">
             <button
@@ -500,7 +500,7 @@
             публичной офертой</p
           >
         </footer>
-      </section>
+      </div>
 
       <aside class="popup popup--call">
         <div class="popup__container">
