--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
       </aside>
 
-      <section class="content">
+      <div class="content">
         <header class="header">
           <div class="header__part">
             <button type="button" class="header__icon icon icon--menu visually-hidden">Открыть меню</button>
@@ -304,7 +304,7 @@
           <p class="footer__item">Информация, размещенная на&nbsp;данной странице, не&nbsp;является
             публичной офертой</p>
         </footer>
-      </section>
+      </div>
 
       <aside class="popup popup--call">
         <div class="popup__container">
