--- a/index.html
+++ b/index.html
@@ -111,52 +111,52 @@
             </section>
           </section>
 
-          <section class="brends hide">
-            <h2 class="brends__title title">Ремонт техники различных брендов</h2>
-            <div class="brends__swiper swiper">
+          <section class="brands hide">
+            <h2 class="brands__title title">Ремонт техники различных брендов</h2>
+            <div class="brands__swiper swiper swiper--240">
               <div class="swiper-wrapper">
-                <a href="#" class="swiper-slide brends__card">
+                <a href="#" class="swiper-slide brands__card">
                   <img src="./img/logo_lenovo.svg" alt="Lenovo" title="Lenovo">
                 </a>
-                <a href="#" class="swiper-slide brends__card">
+                <a href="#" class="swiper-slide brands__card">
                   <img src="./img/logo_samsung.svg" alt="Samsung" title="Samsung">
                 </a>
-                <a href="#" class="swiper-slide brends__card">
+                <a href="#" class="swiper-slide brands__card">
                   <img src="./img/logo_apple.svg" alt="Apple" title="Apple">
                 </a>
-                <a href="#" class="swiper-slide brends__card">
+                <a href="#" class="swiper-slide brands__card">
                   <img src="./img/logo_bosch.svg" alt="Bosch" title="Bosch">
                 </a>
-                <a href="#" class="swiper-slide brends__card">
+                <a href="#" class="swiper-slide brands__card">
                   <img src="./img/logo_hp.svg" alt="HP" title="HP">
                 </a>
-                <a href="#" class="swiper-slide brends__card">
+                <a href="#" class="swiper-slide brands__card">
                   <img src="./img/logo_acer.svg" alt="Acer" title="Acer">
                 </a>
-                <a href="#" class="swiper-slide brends__card">
+                <a href="#" class="swiper-slide brands__card">
                   <img src="./img/logo_viewSonic.svg" alt="ViewSonic" title="ViewSonic">
                 </a>
-                <a href="#" class="swiper-slide brends__card">
+                <a href="#" class="swiper-slide brands__card">
                   <img src="./img/logo_sony.svg" alt="Sony" title="Sony">
                 </a>
-                <a href="#" class="swiper-slide brends__card">
+                <a href="#" class="swiper-slide brands__card">
                   <img src="./img/logo_lenovo.svg" alt="Lenovo" title="Lenovo">
                 </a>
-                <a href="#" class="swiper-slide brends__card">
+                <a href="#" class="swiper-slide brands__card">
                   <img src="./img/logo_samsung.svg" alt="Samsung" title="Samsung">
                 </a>
-                <a href="#" class="swiper-slide brends__card">
+                <a href="#" class="swiper-slide brands__card">
                   <img src="./img/logo_bosch.svg" alt="Bosch" title="Bosch">
                 </a>
               </div>
               <div class="swiper-pagination"></div>
             </div>
-            <button type="button" class="brends__btn btn-show btn-show--brends">Показать все</button>
+            <button type="button" class="brands__btn btn-show btn-show--brands">Показать все</button>
           </section>
 
           <section class="techTypes hide">
             <h2 class="techTypes__title title">Ремонт различных видов техники</h2>
-            <div class="techTypes__swiper swiper">
+            <div class="techTypes__swiper swiper swiper--240">
               <div class="swiper-wrapper">
                 <a href="#" class="swiper-slide techTypes__card">Ремонт ноутбуков</a>
                 <a href="#" class="swiper-slide techTypes__card">Ремонт планшетов</a>
@@ -177,7 +177,7 @@
               <p class="price__head-col price__head-col--price">Цена</p>
               <p class="price__head-col price__head-col--term">Срок</p>
             </div>
-            <div class="price__swiper swiper">
+            <div class="price__swiper swiper swiper--260">
               <div class="swiper-wrapper">
                 <div class="swiper-slide price__card card">
                   <div class="card__item card__item--services">
